# Reminders-to-Clipboard

./: .gitignore  Horário.xlsx  README.md  RemindersToClipboard.py  addNewReminder.py  add_new_reminder.py  copy_reminders_clipboard.py  deleteOutdatedReminders.py  delete_outdated_reminders.py  getDateInterval.py  main.py  pyproject.toml  reminders.json  remindersLog.txt  requirements.txt  sendRemindersToClipboard.py  showFormattedRemindersJson.py  show_formatted_reminders.py
Programs/: deleteOutdatedReminders.py  sendRemindersToClipboard.py  showFormattedRemindersJson.py
Reminders/: Enhanced_Reminders_List.py  Reminders_Functions.py  genericReminderFunctions.py  remindersList.py  sendReminder.py  showReminder.py
config/: config.schema.json  configurator.py
reminders/: createReminder.py  deleteReminder.py  genericReminderFunctions.py  reminder.py  reminder_dao.py  reminder_json.py  reminders.schema.json  remindersList.py  reminders_data.py  reminders_list.py  sendReminder.py  showReminder.py
schedule/: schedule.py
section/: section.py  section_dao.py
test/: Test_Reminders_List.py
utils/: date_utils.py  input_utils.py  json_utils.py
